--- a/doc/src/users-guide/inet-users-guide.tex
+++ b/doc/src/users-guide/inet-users-guide.tex
@@ -435,26 +435,14 @@
 \include{ch-ipv6}
 \cleardoublepage
 
-\include{ch-udp}
+\include{ch-transport}
 \cleardoublepage
 
-\include{ch-tcp}
-\cleardoublepage
-
-\ifdraft TODO
-\include{ch-sctp}
-\cleardoublepage
-\fi
-
-\ifdraft TODO
 \include{ch-routing}
 \cleardoublepage
-\fi
 
-\ifdraft TODO
 \include{ch-adhoc-routing}
 \cleardoublepage
-\fi
 
 \include{ch-diffserv}
 \cleardoublepage
@@ -462,15 +450,11 @@
 \include{ch-mpls}
 \cleardoublepage
 
-\ifdraft TODO
 \include{ch-apps}
 \cleardoublepage
-\fi
 
-\ifdraft TODO
 \include{ch-visualization}
 \cleardoublepage
-\fi
 
 \include{ch-history}
 \cleardoublepage
