--- a/doc/src/users-guide/inet-users-guide.tex
+++ b/doc/src/users-guide/inet-users-guide.tex
@@ -456,6 +456,12 @@
 \include{ch-visualization}
 \cleardoublepage
 
+\include{ch-lifecycle}
+\cleardoublepage
+
+\include{ch-emulation}
+\cleardoublepage
+
 \include{ch-history}
 \cleardoublepage
 
