--- a/doc/src/users-guide/inet-users-guide.tex
+++ b/doc/src/users-guide/inet-users-guide.tex
@@ -399,7 +399,7 @@
 \include{ch-usage}
 \cleardoublepage
 
-\include{ch-node-architecture}
+\include{ch-node-models}
 \cleardoublepage
 
 \include{ch-ppp}
