--- a/doc/src/users-guide/ch-introduction.tex
+++ b/doc/src/users-guide/ch-introduction.tex
@@ -44,8 +44,12 @@ utilizing patches and new models contributed by members of the community.
 
 This manual is written for users who are interested in assembling
 simulations using the components provided by the INET Framework.
-This manual is accompanied by the INET Reference, which is generated from 
-NED and MSG files. A working knowledge of OMNeT++ is assumed.
+(In contrast, if you are interested in modifing INET's components or plan to 
+extend INET with new protocols or other components, we recommend the 
+\textit{INET Developers Guide}.)
+This manual is accompanied by the \textit{INET Reference}, which is 
+a cross-referenced HTML documentation generated from NED and MSG files. 
+A working knowledge of OMNeT++ is assumed.
 
 
 %%% Local Variables:
